test/hello-kubernetes-second.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes-second
  namespace: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-kubernetes-second
  template:
    metadata:
      labels:
        app: hello-kubernetes-second
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.8
        resources:
          limits:
            cpu: 100m
            memory: "60Mi"
        ports:
        - containerPort: 8080
        env:
        - name: MESSAGE
          value: Hello from the second deployment!
---
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-second
  namespace: test
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-kubernetes-second
