test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: test
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - first.test.lumen.eml.ua
      - second.test.lumen.eml.ua
      secretName: hello-k8s-tls
  rules:
  - host: first.test.lumen.eml.ua
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: hello-kubernetes-first
            port:
              number: 80
  - host: second.test.lumen.eml.ua
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: hello-kubernetes-second
            port:
              number: 80
